Fixed md-collapse expansion and improved demo appearance

--- a/imports/ui/md-collapse-demo/md-collapse-demo.styl
+++ b/imports/ui/md-collapse-demo/md-collapse-demo.styl
@@ -1,4 +1,6 @@
 @require '../../../client/main'
 
 .demo--collapse
-  height 127px
+  background-color #E3F2FD
+  border 1px solid #E3F2FD
+  padding-left 1rem
